recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: unclosed character literal
if ( steps==0)  { return '' }
                         ^Spiral:19: error: Unmatched closing brace '}' ignored here
                                                                   }
                                                                   ^